[package]
name = "ldap"
version = "0.3.0"
authors = ["Gregor Reitzenstein <dean4devil@paranoidlabs.org>"]

description = "Pure Rust LDAP Implementation (Not abandonware anymore!)"
repository = "https://github.com/dequbed/rust-ldap"
documentation = "https://docs.rs/ldap"
readme = "README.md"

keywords = ["ldap", "libldap"]

license = "MIT/Apache-2.0"

[dependencies]
log = "0.3.6"
futures = "0.1"
byteorder = "1.0.0"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"

asnom = { path = "../asnom" }
rfc4515 = { path = "../rfc4515" }

[dev-dependencies]
env_logger = "0.4.2"
