[package]
authors = ["Gregor Reitzenstein <dean4devil@paranoidlabs.org>"]
description = "Pure Rust LDAP Implementation (Not abandonware anymore!)"
documentation = "https://docs.rs/ldap"
keywords = ["ldap", "libldap"]
license = "MIT/Apache-2.0"
name = "ldap"
readme = "README.md"
repository = "https://github.com/dequbed/rust-ldap"
version = "0.4.0"

[dependencies]
byteorder = "1.0.0"
futures = "0.1"
log = "0.3.6"
native-tls = "0.1.1"
tokio-core = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-tls = { version = "0.1.2", features = [ "tokio-proto" ] }

[dependencies.asnom]
git = "https://github.com/dequbed/asnom.git"

[dependencies.rfc4515]
git = "https://github.com/dequbed/rfc4515.git"

[dev-dependencies]
env_logger = "0.4.2"
