[package]
name = "ldap_client"
version = "0.1.0"
authors = ["Dean4Devil <dean4devil@paranoidlabs.org>"]

description = "Pure Rust LDAP Client Library"
repository = "https://github.com/dean4devil/rust-ldap"
readme = "README.md"

keywords = ["ldap", "libldap"]

license = "MIT/Apache-2.0"

[lib]
name = "ldap_client"

[dependencies]
ldap_protocol = { path = "../protocol/", version = "^0" }
