[package]
name = "ldap-protocol"
version = "0.0.4"
authors = [ "Dean Davis <dean4devil@paranoidlabs.org>" ]

description = "Pure Rust implementation of RFC4511"
repository = "https://github.com/dean4devil/rust-ldap"
readme = "README.md"

keywords = ["ldap", "libldap"]

license = "MIT/Apache-2.0"

[lib]
name = "ldap_protocol"

[dependencies]
byteorder = "*"
